[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "noshow-iq"
version = "0.1.0"
description = "Patient appointment no-show prediction API"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pymongo",
    "pandas",
    "scikit-learn",
    "imbalanced-learn",
    "joblib",
    "python-dotenv",
    "pydantic",
]